<resources>
    <string name="app_name">Tale Adventure</string>
    <string name="preference_file_name">%s.PREFERENCE_FILE</string>
    <string name="app_token_wrapper">Bearer %s</string>
    <!--Public-->
    <string name="next">다음</string>
    <string name="cd_back">뒤로 가기 버튼</string>
    <string name="tale_domestic">국내 동화</string>
    <string name="tale_western">서양 동화</string>
    <string name="korean">한국어</string>
    <string name="english">영어</string>
    <string name="japanese">일본어</string>
    <string name="profile">프로필</string>
    <string name="complete">완료</string>
    <string name="home">홈</string>
    <string name="word">나만의 단어장</string>
    <string name="my_page">마이 페이지</string>
    <string name="daily_adventure">데일리 어드벤쳐</string>
    <string name="play">PLAY!</string>
    <string name="logout">로그아웃</string>
    <string name="notice">공지사항</string>
    <string name="help">도움말</string>
    <string name="contact">고객센터 문의</string>
    <string name="oss_license">오픈소스 고지</string>
    <string name="chapter">챕터</string>
    <string name="cd_tale">동화책 표지</string>
    <string name="server_error">서버에 문제가 발생하였습니다. 다시 시도해 주세요.</string>
    <!--Login-->
    <string name="cd_login_bg">로그인 화면 배경</string>
    <string name="cd_kakao_login_btn">카카오 로그인 버튼</string>
    <!--Onboarding-->
    <string name="onboard_first_fragment">OnboardFirstFragment</string>
    <string name="onboard_second_fragment">OnboardSecondFragment</string>
    <string name="onboard_third_fragment">OnboardThirdFragment</string>
    <string name="onboard_fourth_fragment">onboard_fourth_fragment</string>
    <string name="cd_onboard_first_bg">온보딩 첫 번째 화면 배경</string>
    <string name="onboard_first_title">환영합니다 :)\n아이의 나이대를\n골라주세요.</string>
    <string name="onboard_first_age_under_2">2세 이하</string>
    <string name="onboard_first_age_3_to_5">3~5세</string>
    <string name="onboard_first_age_6_to_8">6~8세</string>
    <string name="onboard_first_age_higher_9">9세 이상</string>
    <string name="cd_onboard_first_indicator">첫 번째 온보딩 페이지</string>
    <string name="cd_onboard_second_indicator">두 번째 온보딩 페이지</string>
    <string name="cd_onboard_third_indicator">세 번째 온보딩 페이지</string>
    <string name="cd_onboard_fourth_indicator">네 번째 온보딩 페이지</string>
    <string name="cd_onboard_second_bg">온보딩 두 번째 화면 배경</string>
    <string name="cd_onboard_third_bg">온보딩 세 번째 화면 배경</string>
    <string name="onboard_second_title">좋아하는 장르를\n골라주세요.</string>
    <string name="onboard_second_desc">중복선택 가능</string>
    <string name="onboard_third_title">거의 끝났어요,\n희망하는 언어를\n선택해주세요.</string>
    <string name="onboard_fourth_title">아이의 닉네임을\n설정해주세요.</string>
    <string name="onboard_fourth_desc">나중에 바꿀 수 있어요</string>
    <string name="login_title">내 손 안의\n3D 동화책</string>
    <string name="hint_nickname">2~8 글자로 설정해주세요</string>
    <!--Home-->
    <string name="cd_home_daily_adventure_bg">데일리 어드벤쳐 배경</string>
    <string name="library">라이브러리</string>
    <string name="home_nice_to_meet_you">만나서 반가워요,</string>
    <string name="home_fun_word_game">재밌는 낱말게임</string>
    <string name="daily_adventure_day">Day %s</string>
    <!--My Page-->
    <string name="cd_profile">프로필 사진</string>
    <string name="cd_profile_edit">프로필 편집</string>
    <string name="my_page_notification_setting">푸시알림 설정</string>
    <string name="my_page_language_setting">콘텐츠 언어 설정</string>
    <string name="my_page_social_type_kakao">소셜 연동: 카카오톡</string>
    <string name="my_page_nickname">%s 님</string>
    <string name="my_page_user_info_error">사용자 정보 요청 실패 : %s</string>
    <!--Tale-->
    <!--My Word-->
    <string name="my_word_title">나만의 단어장</string>
    <string name="cd_blank_space">빈 칸</string>
    <!--Word Game-->
    <string name="cd_word_game_backgronud">단어가 등장한 장면</string>
    <string name="cd_bookmark">북마크 버튼</string>
    <string name="end_good_job">참 잘했어요!</string>
    <string name="grade_correct">정답이에요!</string>
    <string name="grade_incorrect">다시 해볼까요?</string>
    <string name="nickname_example">익명의 여행자</string>
    <string name="game_indicator">%d/%d</string>
    <string name="error_not_ye">아직 준비되지 않은 기능입니다.</string>
    <string name="error_no_bookmark">북마크 된 단어가 없습니다.</string>
    <string name="channel_name">Tale Adventure 알림 채널</string>
    <string name="channel_desc">Tale Adventure 알림을 위한 채널</string>
</resources>