<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.open6.taleadventure.presentation.onboard.viewmodel.OnboardThirdViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.onboard.view.OnboardThirdFragment">

        <ImageView
            android:id="@+id/iv_onboard_third_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/cd_back"
            android:padding="9dp"
            android:src="@drawable/ic_back_purple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_onboard_third_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="30dp"
            android:text="@string/onboard_third_title"
            android:textAppearance="@style/B28"
            app:layout_constraintTop_toBottomOf="@id/iv_onboard_third_back" />

        <TextView
            android:id="@+id/tv_onboard_third_language_korean"
            style="@style/SelectButton"
            android:layout_width="0dp"
            android:layout_height="119dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="10dp"
            android:onClick="@{(view) -> vm.setSelectedView(view)}"
            android:text="@string/korean"
            app:layout_constraintBottom_toTopOf="@id/iv_onboard_third_bg"
            app:layout_constraintEnd_toStartOf="@id/tv_onboard_third_language_english"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_onboard_third_title" />

        <TextView
            android:id="@+id/tv_onboard_third_language_english"
            style="@style/SelectButton"
            android:layout_width="0dp"
            android:layout_height="119dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/english"
            app:layout_constraintBottom_toBottomOf="@id/tv_onboard_third_language_korean"
            app:layout_constraintEnd_toStartOf="@id/tv_onboard_third_language_japanese"
            app:layout_constraintStart_toEndOf="@id/tv_onboard_third_language_korean"
            app:layout_constraintTop_toTopOf="@id/tv_onboard_third_language_korean" />

        <TextView
            android:id="@+id/tv_onboard_third_language_japanese"
            style="@style/SelectButton"
            android:layout_width="0dp"
            android:layout_height="119dp"
            android:layout_marginEnd="33dp"
            android:text="@string/japanese"
            app:layout_constraintBottom_toBottomOf="@id/tv_onboard_third_language_korean"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_onboard_third_language_english"
            app:layout_constraintTop_toTopOf="@id/tv_onboard_third_language_korean" />

        <ImageView
            android:id="@+id/iv_onboard_third_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/cd_onboard_third_bg"
            android:src="@drawable/img_onboard_third_bg"
            app:layout_constraintBottom_toTopOf="@id/iv_onboard_third_indicator"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/iv_onboard_third_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:contentDescription="@string/cd_onboard_third_indicator"
            android:src="@drawable/ic_onboard_third_indicator"
            app:layout_constraintBottom_toTopOf="@id/tv_onboard_third_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_onboard_third_next"
            style="@style/LargeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="20dp"
            android:enabled="@{vm.isSelectedViewExist()}"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>